--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,24 @@
 /* Clases reutilizables */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+}
 
+.container-flex-column {
+  display: flex;
+	flex-direction: column;
+  justify-content: center;
+	padding: 2em;
+}
+
+.gradient {
+  background: linear-gradient(#530060, #da0987);;
+}
+
+.vh100 {
+	height: 100vh;
+}
 /* Clases específicas */
