--- a/views/signup.html
+++ b/views/signup.html
@@ -7,15 +7,10 @@
 maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../vendors/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body class="gradient container-flex-column vh100">
-    <div class="container-fluid">
-      <div class="row">
-        <img src="assets/images/logo-white.png" alt="logo-white" class="col-xs-offset-2 col-xs-8">
-      </div>
-    </div>
+  <body class="gradient vh100">
 
     <!-- Jquery -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
@@ -23,6 +18,6 @@ maximum-scale=1">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
     <!-- Javascript -->
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
   </body>
 </html>
