--- a/views/main-view.html
+++ b/views/main-view.html
@@ -16,10 +16,11 @@ maximum-scale=1">
         <img src="../assets/images/logo-white.png" alt="logo-white" class="col-xs-offset-4 col-xs-5">
       </div>
     </header>
-    <div class="container-fluid main-view-pink-logos">
+    <div class="container-fluid main-view-lyftlyfe-logo">
       <div class="row">
-        <img src="../assets/images/logo-pink.png" alt="logo-pink" class="col-xs-8 pull-left logo-main-view-1">
-        <img src="../assets/images/logo-pink.png" alt="logo-pink" class="col-xs-8 pull-right logo-main-view-2">
+        <!-- <img src="../assets/images/logo-pink.png" alt="logo-pink" class="col-xs-8 pull-left logo-main-view-1">
+        <img src="../assets/images/logo-pink.png" alt="logo-pink" class="col-xs-8 pull-right logo-main-view-2"> -->
+        <img src="../assets/images/trying-out-nobckgrnd.png" alt="lyft-lyfe-logo" class="col-xs-12">
       </div>
     </div>
     <div class="buttons-register col-xs-offset-3">
