--- a/views/filling-data.html
+++ b/views/filling-data.html
@@ -22,22 +22,18 @@ maximum-scale=1">
       <hr>
     </header>
 
-    <section>
-      <select class="" name="">
-        <option value="mexico">Mexico</option>
-        <option value="colombia">Colombia</option>
-        <option value="peru">Peru</option>
-        <option value="eeuu">United States</option>
-      </select>
-      <input type="text" name="" value="">
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
+    <section class="fill-data">
+      <form class="" action="index.html" method="post">
+        <input type="text" placeholder="First name">
+        <input type="text" placeholder="Last name">
+        <input type="text" placeholder="Email">
+        <br>
+        <br>
+        <p class="text-center">I agree to Lyft's <a href="#">Terms of service</a></p>
+      </form>
     </section>
 
-    <section class="info-button-signup">
-      <p class="text-center">We'll send you a text to verify your phone</p>
-      <br>
+    <section class="info-button-fill-data">
       <button type="button" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
     </section>
 
