--- a/views/verify-number.html
+++ b/views/verify-number.html
@@ -17,26 +17,21 @@ maximum-scale=1">
 			  <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
 		    </a>
 	    </div>
-      <h1 class="text-center text-capitalize">sign up</h1>
+      <h1 class="text-center">Verify phone number</h1>
       <p class="text-center">Join now for free ride credit</p>
       <hr>
     </header>
 
     <section>
-      <select class="" name="">
-        <option value="mexico">Mexico</option>
-        <option value="colombia">Colombia</option>
-        <option value="peru">Peru</option>
-        <option value="eeuu">United States</option>
-      </select>
-      <input type="text" name="" value="">
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
+      <p class="text-center">
+        LAB -
+        <input type="text" name="" value="">
+      </p>
+
     </section>
 
-    <section class="info-button-signup">
-      <p class="text-center">We'll send you a text to verify your phone</p>
+    <section class="info-button-verify-number">
+      <p class="text-center">Enter the code sent to</p>
       <br>
       <button type="button" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
     </section>
