--- a/views/last-view.html
+++ b/views/last-view.html
@@ -10,35 +10,16 @@ maximum-scale=1">
     <link rel="stylesheet" href="../vendors/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
-    <header>
-      <div class="slide-buttons">
-		    <a href="main-view.html" type="button" class="btn btn-success">
-			  <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
-		    </a>
-	    </div>
-      <h1 class="text-center text-capitalize">sign up</h1>
-      <p class="text-center">Join now for free ride credit</p>
-      <hr>
-    </header>
-
-    <section>
-      <select class="" name="">
-        <option value="mexico">Mexico</option>
-        <option value="colombia">Colombia</option>
-        <option value="peru">Peru</option>
-        <option value="eeuu">United States</option>
-      </select>
-      <input type="text" name="" value="">
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
+  <body class="gradient vh100">
+    <section class="container-fluid vertical-align-bottom">
+      <div class="row">
+        <img src="../assets/images/logo-white.png" alt="logo-white" class="col-xs-offset-3 col-xs-6">
+      </div>
     </section>
-
-    <section class="info-button-signup">
-      <p class="text-center">We'll send you a text to verify your phone</p>
-      <br>
-      <button type="button" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
+    <section class="container-fluid main-view-lyftlyfe-logo vertical-align-bottom">
+      <div class="row">
+        <img src="../assets/images/check.png" alt="check-sign" class="col-xs-offset-3 col-xs-6">
+      </div>
     </section>
 
 
