--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Foodmap</title>
+    <title>Lyft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,
 maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -10,7 +10,7 @@ maximum-scale=1">
     <link rel="stylesheet" href="../vendors/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body class="gradient vh100">
+  <body>
 
     <!-- Jquery -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
