--- a/views/verify-number.html
+++ b/views/verify-number.html
@@ -12,8 +12,9 @@ maximum-scale=1">
   </head>
   <body>
     <header>
+      <!-- Botón para regresar atrás (vista de registro) -->
       <div class="slide-buttons">
-		    <a href="main-view.html" type="button" class="btn btn-success">
+		    <a href="signup.html" type="button" class="btn btn-success">
 			  <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
 		    </a>
 	    </div>
@@ -25,6 +26,7 @@ maximum-scale=1">
     <section>
       <p class="text-center">
         LAB -
+        <!-- Ingreso de código dado -->
         <input type="text" name="" value="">
       </p>
 
@@ -33,6 +35,7 @@ maximum-scale=1">
     <section class="info-button-verify-number">
       <p class="text-center">Enter the code sent to</p>
       <br>
+      <!-- Botón que se habilita al completar el código dado y pasar a la siguiente vista (llenado de datos) -->
       <button type="button" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
     </section>
 
