--- a/views/last-view.html
+++ b/views/last-view.html
@@ -11,15 +11,16 @@ maximum-scale=1">
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body class="gradient vh100">
-    <section class="container-fluid vertical-align-bottom">
-      <div class="row">
-        <img src="../assets/images/logo-white.png" alt="logo-white" class="col-xs-offset-3 col-xs-6">
-      </div>
+    <section class="text-center bottom">
+      <figure class="">
+        <img src="../assets/images/logo-white.png" alt="logo-white" class="pimg ">
+      </figure>
     </section>
-    <section class="container-fluid main-view-lyftlyfe-logo vertical-align-bottom">
-      <div class="row">
-        <img src="../assets/images/check.png" alt="check-sign" class="col-xs-offset-3 col-xs-6">
-      </div>
+
+    <section class="main-view-lyftlyfe-logo text-center bottom">
+      <figure class="">
+        <img src="../assets/images/check.png" alt="check-sign" class="pimg ">
+      </figure>
     </section>
 
 
