--- a/views/filling-data.html
+++ b/views/filling-data.html
@@ -32,7 +32,9 @@ maximum-scale=1">
         <br>
         <br>
         <!-- Checkbox de estar de acuerdo con los términos del servicio -->
-        <p class="text-center">I agree to Lyft's <a href="#">Terms of service</a></p>
+        <p class="text-center"><label class="text-center">
+				  <input type="checkbox">
+			  </label>I agree to Lyft's <a href="#">Terms of service</a></p>
       </form>
     </section>
 
@@ -48,6 +50,6 @@ maximum-scale=1">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
     <!-- Javascript -->
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/filling-data.js"></script>
   </body>
 </html>
