--- a/views/verify-number.html
+++ b/views/verify-number.html
@@ -46,6 +46,6 @@ maximum-scale=1">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
     <!-- Javascript -->
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/verify-number.js"></script>
   </body>
 </html>
