--- a/views/filling-data.html
+++ b/views/filling-data.html
@@ -33,14 +33,14 @@ maximum-scale=1">
         <br>
         <!-- Checkbox de estar de acuerdo con los términos del servicio -->
         <p class="text-center"><label class="text-center">
-				  <input type="checkbox">
+				  <input type="checkbox" unchecked="true">
 			  </label>I agree to Lyft's <a href="#">Terms of service</a></p>
       </form>
     </section>
 
     <section class="info-button-fill-data">
       <!-- Botón que se habilita al completar los datos personales y pasar a la siguiente vista (vista final) -->
-      <button type="button" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
+      <button type="submit" name="button" class="text-uppercase center-block next-btn">next</button>
     </section>
 
 
