subiendo función que valida el código que confirma el número telefónico y habilita el botón

--- a/views/verify-number.html
+++ b/views/verify-number.html
@@ -27,7 +27,7 @@ maximum-scale=1">
       <p class="text-center">
         LAB -
         <!-- Ingreso de código dado -->
-        <input type="text" name="" value="">
+        <input type="text" name="" value="" id="random-code">
       </p>
 
     </section>
@@ -36,7 +36,7 @@ maximum-scale=1">
       <p class="text-center">Enter the code sent to</p>
       <br>
       <!-- Botón que se habilita al completar el código dado y pasar a la siguiente vista (llenado de datos) -->
-      <button type="button" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
+      <button type="submit" name="button" class="text-uppercase center-block next-btn" disabled>next</button>
     </section>
 
 
