agregando funcionalidad de seleccionar un país, agregar número telefónico y habilitar botón

--- a/views/signup.html
+++ b/views/signup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lyft</title>
+    <title>Lyft - Sign up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,
 maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -26,7 +26,7 @@ maximum-scale=1">
 
     <section class="text-center">
       <!-- Selección de países -->
-      <div class="btn-group">
+      <!-- <div class="btn-group">
 		      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 				      <span data-bind="label">Country</span>&nbsp;<span class="caret"></span>
 			     </button>
@@ -36,19 +36,16 @@ maximum-scale=1">
   		  		   <li><a href="#"><span class="flag-icon flag-icon-pe"></span>Peru</a></li>
   				     <li><a href="#"><span class="flag-icon flag-icon-us"></span>United states</a></li>
 				  </ul>
-			 </div>
-
-      <select class="country-select" name="">
-        <option value="mexico">Mexico</option>
-        <option value="colombia">Colombia</option>
-        <option value="peru">Peru</option>
-        <option value="eeuu">United States</option>
+			 </div> -->
+      <!-- Selección de países -->
+      <select id="country" class="country-select" name="">
+        <option value="+52">Mexico</option>
+        <option value="+57">Colombia</option>
+        <option value="+51">Peru</option>
+        <option value="+1">United States</option>
      </select>
       <!-- Ingreso de número telefónico según cada país -->
-      <input type="text" name="" value="">
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
-      <input type="text" name="" value="" hidden>
+      <input type="text" name="" value="" id="phone-number">
     </section>
 
     <section class="info-button-signup">
