--- a/views/login.html
+++ b/views/login.html
@@ -11,13 +11,22 @@ maximum-scale=1">
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-
+    <header>
+      <!-- Botón para regresar atrás (vista principal) -->
+      <div class="slide-buttons">
+		    <a href="main-view.html" type="button" class="btn btn-success">
+			  <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+		    </a>
+	    </div>
+      <h1 class="text-center">Still in construction. So sorry!</h1>
+      <hr>
+    </header>
     <!-- Jquery -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
     <!-- Javascript -->
-    <script type="text/javascript" src="../js/app.js"></script>
+    <!-- <script type="text/javascript" src="../js/app.js"></script> -->
   </body>
 </html>
