--- a/views/filling-data.html
+++ b/views/filling-data.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lyft</title>
+    <title>Lyft - Filling data</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,
 maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -23,7 +23,7 @@ maximum-scale=1">
       <hr>
     </header>
 
-    <section class="fill-data">
+    <section class="fill-data text-center">
       <!-- Ingreso de nombre, apellido y correo electrónico -->
       <form class="" action="index.html" method="post">
         <input type="text" placeholder="First name">
