--- a/views/filling-data.html
+++ b/views/filling-data.html
@@ -26,9 +26,9 @@ maximum-scale=1">
     <section class="fill-data text-center">
       <!-- Ingreso de nombre, apellido y correo electrónico -->
       <form class="" action="index.html" method="post">
-        <input type="text" placeholder="First name">
-        <input type="text" placeholder="Last name">
-        <input type="text" placeholder="Email">
+        <input type="text" placeholder="First name" id="first-name-input">
+        <input type="text" placeholder="Last name" id="last-name-input">
+        <input type="text" placeholder="Email" id="email-input">
         <br>
         <br>
         <!-- Checkbox de estar de acuerdo con los términos del servicio -->
