--- a/views/last-view.html
+++ b/views/last-view.html
@@ -10,7 +10,7 @@ maximum-scale=1">
     <link rel="stylesheet" href="../vendors/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body class="gradient vh100">
+  <body class="gradient vh100 container-flex-column-last-view">
     <section class="text-center bottom">
       <figure class="">
         <img src="../assets/images/logo-white.png" alt="logo-white" class="pimg ">
